[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regrid_to_healpix"
version = "0.1.0"
description = "Sparse GPU-enabled regridding from lon/lat to HEALPix"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"

authors = [
  { name = "Jean-Marc Delouis" },
  { name = "Tina Odaka" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "torch",
  "foscat",
  "healpix-geo",
]

[tool.setuptools.packages.find]
include = [
    "regrid_to_healpix",
    "regrid_to_healpix.*",
]
