[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "healpix-resample"
dynamic = ["version"]
description = "Sparse GPU-enabled regridding from lon/lat to HEALPix"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"

authors = [
  { name = "Jean-Marc Delouis" },
  { name = "Tina Odaka" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "torch",
  "healpix-geo",
]

[tool.setuptools.packages.find]
include = [
    "healpix_resample",
    "healpix_resample.*",
]

[tool.setuptools_scm]
